# Python_Pic_Viewer

./: .gitignore  Python_Pic_Viewer.py  README.md  hook-tkinterdnd2.py  pyproject.toml  pyqt_test_version.py  scale_test.py
image_viewer/: ImageViewer.py
